<resources>
<string name="app_name">Ghost Commander</string>
<string name="file">New</string>
<string name="location">Location</string>
<string name="list">List</string>
<string name="app">Application</string>
<string name="help">Help</string>
<string name="F1">Help</string>
<string name="F2">Rename</string>
<string name="F3">View</string>
<string name="F4">Edit</string>
<string name="SF4">File</string>
<string name="F5">Copy</string>
<string name="F6">Move</string>
<string name="F7">MkDir</string>
<string name="F8">Del</string>
<string name="F9">Prefs</string>
<string name="F10">Exit</string>
<string name="oth_sh_this">Show same dir</string>
<string name="oth_sh_dir">Open \"%s\" in other panel</string>
<string name="eq">Same</string>
<string name="change">Toggle</string>
<string name="tgl">Toggle</string>
<string name="sz">Info</string>
<string name="refresh">Refresh</string>
<string name="swap">Swap</string>
<string name="enter">Change location</string>
<string name="home">Home</string>
<string name="sdcard">/sdcard</string>
<string name="softkbd">Keyboard</string>
<string name="enter_b">Location</string>
<string name="add_fav">Add to favorites</string>
<string name="add_fav_b">Add fave</string>
<string name="remount_b">Remount /system</string>
<string name="remount">Remount</string>
<string name="hidden">Hidden</string>
<string name="rescan">Rescan media</string>
<string name="favs">Favorites</string>
<string name="local">Local storage</string>
<string name="external">External card</string>
<string name="media">Media Store</string>
<string name="saf">Storage Access Framework</string>
<string name="ftp">FTP site</string>
<string name="sftp">SFTP site</string>
<string name="smb">Windows share</string>
<string name="plugins">Browse plugins</string>
<string name="root">Root mode</string>
<string name="mount">Mount points</string>
<string name="mount_b">Mounts</string>
<string name="apps">Applications</string>
<string name="exit">Exit</string>
<string name="forget">Forget account (app exits)</string>
<string name="favs_descr">View and manage your list of favorite folders and sites</string>
<string name="local_descr">Browse, organize and modify the contents of the primary file system</string>
<string name="external_descr">Access files on the physically inserted SD card. It may be read-only on some devices</string>
<string name="media_descr">Make modifications on the external SD card via the MediaStore interface</string>
<string name="saf_descr">Modify the external SD card via the Storage Access Framework interface</string>
<string name="ftp_descr">Connect to an FTP server</string>
<string name="sftp_descr">Connect to an SSH FTP (sftp) server</string>
<string name="smb_descr">Connect to shared folders on a Windows machine</string>
<string name="plugins_descr">Look for more Ghost Commander plugins</string>
<string name="root_descr">For rooted devices only: manage critical system files. Only proceed if you know what you\'re doing.</string>
<string name="mount_descr">Display a list of all mount points. Remount them to \"rw\" mode, then back to \"ro\" mode after changes. Proceed with caution.</string>
<string name="apps_descr">View and manage installed packages</string>
<string name="exit_descr">Close the application</string>
<string name="shortcut">Add shortcut</string>
<string name="enter_ftp">Connect to FTP</string>
<string name="enter_smb">Connect to Windows PC</string>
<string name="search_file">Search</string>
<string name="menu">Menu</string>
<string name="sort_by_name">By Name</string>
<string name="sort_by_ext">By Extension</string>
<string name="sort_by_size">By Size</string>
<string name="sort_by_date">By Date</string>
<string name="sort_by_name_b">By Name</string>
<string name="sort_by_ext_b">By Ext</string>
<string name="sort_by_size_b">By Size</string>
<string name="sort_by_date_b">By Date</string>
<string name="select_all">Select all</string>
<string name="unselect_all">Unselect all</string>
<string name="select_b">Select</string>
<string name="unselect_b">Unselect</string>
<string name="toggle_panels_mode">Change panels mode</string>
<string name="prefs">Settings</string>
<string name="save_prefs">Back up settings</string>
<string name="rest_prefs">Restore settings</string>
<string name="save_log">Save log to file</string>
<string name="prefs_saved">Your preferences have been saved</string>
<string name="prefs_restr">Your preferences have been restored</string>
<string name="about">About</string>
<string name="keys">Help</string>
<string name="new_file">Create a new text file</string>
<string name="new_folder">Create a new folder</string>
<string name="new_zip">Create a new ZIP file</string>
<string name="go_button">Go</string>
<string name="show_size">Info</string>
<string name="send_to">Send to…</string>
<string name="open_with">Open with…</string>
<string name="open">Open</string>
<string name="copy_name">Copy name to clipboard</string>
<string name="fav_fld">Add \"%s\" to favorites</string>
<string name="create_zip">Create a new ZIP file</string>
<string name="create_zip_title">Create ZIP file</string>
<string name="extract_zip">Extract ZIP</string>
<string name="base_color">Base color</string>
<string name="typemasks">File masks</string>
<string name="color_sample">Sample</string>
<string name="add_new_type">Add new</string>
<string name="select">Select</string>
<string name="data_settings">File lists</string>
<string name="layout_settings">Appearance</string>
<string name="input_settings">Input</string>
<string name="selection_zone_setup">Selection area</string>
<string name="summary_selection_zone_setup">Customize the way files and folders are selected</string>
<string name="show_confirm">Confirmations</string>
<string name="summary_show_confirm">Show a message after certain operations</string>
<string name="advanced">Advanced</string>
<string name="advanced_settings">Miscellaneous</string>
<string name="summary_advanced_settings">Extra settings for advanced users</string>
<string name="send_content">Send using content provider</string>
<string name="summary_send_content">Try to uncheck if your file sending application does not implement a content resolver</string>
<string name="panels_mode">Side-by-side panels</string>
<string name="summary_panels_mode">Show both panels side-by-side in a split screen view</string>
<string name="two_lines">Two lines in a row</string>
<string name="summary_two_lines">Show file attributes below file names</string>
<string name="show_icons">Enable icons</string>
<string name="summary_show_icons">Show file and folder icons instead of just text</string>
<string name="toolbar_settings">Toolbar</string>
<string name="summary_toolbar_settings">Customize the toolbar at the bottom of the screen</string>
<string name="show_toolbar">Enable toolbar</string>
<string name="summary_show_toolbar">Show the toolbar at the bottom of the screen</string>
<string name="show_hotkeys">Show hot keys</string>
<string name="summary_show_hotkeys">Show hot key shortcuts on certain buttons</string>
<string name="toolbar_preference">Customize the toolbar</string>
<string name="summary_toolbar_preference">Select which buttons to display, edit and arrange them</string>
<string name="finger_friendly">Finger-friendly</string>
<string name="summary_finger_friendly">Enlarge the user interface elements</string>
<string name="prevent_root">Warn on leaving /sdcard</string>
<string name="summary_prevent_root">Issue a warning when going to a device\'s root folder</string>
<string name="show_root">Show root and mounts</string>
<string name="summary_show_root">Home view will display \"Root mode\" and \"Mount points\"</string>
<string name="root_root">Automatic root mode</string>
<string name="summary_root_root">Switch to root mode when going to a device\'s root folder</string>
<string name="thumbnails">Enable thumbnails</string>
<string name="summary_thumbnails">Show thumbnails for images instead of icons</string>
<string name="thumbnails_size">Thumbnail size</string>
<string name="summary_thumbnails_size">Set the percentage value in relation to icon size</string>
<string name="font_size">Font size</string>
<string name="summary_font_size">Set the font size</string>
<string name="left_panel_settings">Left panel</string>
<string name="right_panel_settings">Right panel</string>
<string name="detailed_view_SbS">Detailed side-by-side mode</string>
<string name="summary_detailed_view_SbS">Show size and date for files in side-by-side mode</string>
<string name="detailed_view_Ovr">Detailed overlapped mode</string>
<string name="summary_detailed_view_Ovr">Show size and date for files in overlapped mode</string>
<string name="sorting">Sorting method</string>
<string name="summary_sorting">Choose how to sort files and folders</string>
<string name="sort_case">Ignore case in sorting</string>
<string name="summary_sort_case">Check this to ignore case sensitivity in file and folder sorting</string>
<string name="show_hidden">Show hidden files</string>
<string name="summary_show_hidden">Show files and folders with a preceding dot in their names</string>
<string name="compatibility_settings">Hardware buttons</string>
<string name="summary_compatibility_settings">Customize the overriding of hardware button functions</string>
<string name="panels_sliding">Enable sliding gesture</string>
<string name="summary_panels_sliding">Switch panels by a horizontal scroll gesture</string>
<string name="arrow_mode">Override arrow buttons</string>
<string name="summary_arrow_mode">Left/right arrows perform toggle/select</string>
<string name="volume_mode">Override volume buttons</string>
<string name="summary_volume_mode">Volume buttons perform toggle/select</string>
<string name="exit_on_back">Back button exits</string>
<string name="summary_exit_on_back">Back button closes the application</string>
<string name="colors">Colors</string>
<string name="summary_colors">Modify background and foreground colors</string>
<string name="bgr_color_picker">Background</string>
<string name="summary_bgr_color_picker">Choose a color for the main background</string>
<string name="fgr_color_picker">Foreground</string>
<string name="summary_fgr_color_picker">Choose a color for file names and attributes</string>
<string name="cur_color_picker">Focused</string>
<string name="summary_cur_color_picker">Choose a color for items in focus</string>
<string name="sel_color_picker">Selected background</string>
<string name="summary_sel_color_picker">Choose a background color for selected files and the current panel\'s title</string>
<string name="sfg_color_picker">Selected foreground</string>
<string name="summary_sfg_color_picker">Choose a text color for selected files and the current panel\'s title</string>
<string name="ttl_color_picker">Panel title</string>
<string name="summary_ttl_color_picker">Choose a background color for the panel title</string>
<string name="btn_color_picker">Buttons</string>
<string name="summary_btn_color_picker">Choose a background color for the buttons</string>
<string name="color">Color</string>
<string name="language">Language</string>
<string name="summary_language">Override the system language</string>
<string name="editor_activity">Custom text editor</string>
<string name="summary_editor_activity">Enter the activity name of an external text editor</string>
<string name="busybox_location">Path to BusyBox</string>
<string name="summary_busybox_location">Specify the location of the BusyBox executable</string>
<string name="su_location">Path to su</string>
<string name="summary_su_location">Specify the location of the su executable</string>
<string name="scan_all">Scan all files</string>
<string name="summary_scan_all">Uncheck to scan only media files</string>
<string name="go_up">Parent</string>
<string name="go_top">Top</string>
<string name="go_end">Bottom</string>
<string name="donate">Make a donation</string>
<string name="online_help">Online help</string>
</resources>